--- a/now.json
+++ b/now.json
@@ -1,11 +1,9 @@
 {
     "version": 2,
-    "build": [{
-        "src": "index.js",
-        "use": "@now/node-sever"
-    }],
-    "routes": [{
-        "src": "/.*",
-        "dest": "index.js"
-    }]
+    "builds":[
+        { "src": "index.js", "use": "@now/node-server" }
+    ],
+    "routes":[
+        { "src": "/.*", "dest": "index.js" }
+    ]
 }
